--- a/main.css
+++ b/main.css
@@ -122,6 +122,7 @@ li {
     align-items: center;
     color:gold;
     border:gold solid 5px;
+    border-radius: 5px;
     max-width: 78vw;
     overflow-wrap: break-word;
     text-shadow: 0px 5px black;
@@ -129,7 +130,7 @@ li {
     font-size: 84px;
     padding:20px;
     font-weight: bold;
-    margin: 30px 0 10px;
+    margin: 30px 0 5px;
 }
 
 .popup p {
@@ -142,13 +143,14 @@ li {
     background: #121253;
     color: white;
     cursor: pointer;
+    width: 225px;
     text-shadow: 0px 0px 8px black;
     font-size: 42px;
     border: 4px solid gold;
     border-radius: 5px;
     box-shadow: 5px 6px black;
-    padding:15px;
-    margin-top:200px;
+    padding:12px;
+    margin-top:275px;
 }
 
 .prev:hover {
@@ -160,14 +162,15 @@ li {
     visibility: hidden;
 }
 
-.answer, .answer2, .answer3, .answer4, .answer5 {
+.answer, .answer2, .answer3, .answer4, .answer5, .answer6, .answer7, .answer8, .answer9, .answer10, .answer11, .answer12,
+ .answer13 {
     visibility: visible;
     color:greenyellow;
 }
 
 .popup button {
-    margin-top: 25px;
-    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-bottom: 25px;
     padding: 10px 20px;
     border: 0;
     box-shadow: 4px 5px 5px rgba(0,0,0,0.7);
@@ -175,4 +178,8 @@ li {
     font-size: 20px;
     border-radius: 4px;
     cursor: pointer;
+}
+
+.popup button:hover {
+    font-weight: bold;
 }
