--- a/main.css
+++ b/main.css
@@ -140,10 +140,11 @@ li {
 }
 
 .popup .prev {
+    display: flex;
+    flex-direction: column;
     background: #121253;
     color: white;
     cursor: pointer;
-    width: 225px;
     text-shadow: 0px 0px 8px black;
     font-size: 42px;
     border: 4px solid gold;
@@ -162,8 +163,8 @@ li {
     visibility: hidden;
 }
 
-.answer, .answer2, .answer3, .answer4, .answer5, .answer6, .answer7, .answer8, .answer9, .answer10, .answer11, .answer12,
- .answer13 {
+.answer, .answer2, .answer3, .answer4, .answer5, .answer6, .answer7, .answer8, .answer9, .answer10, .answer11, .answer12, .answer13,
+ .answer14, .answer15, .answer16, .answer17, .answer18, .answer19, .answer20, .answer21, .answer22, .answer23, .answer24, .answer25 {
     visibility: visible;
     color:greenyellow;
 }
