--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 .body-page {
-    background: #0c0c3c;
+    background: #141438;
     background-attachment: fixed;
     height: 100%;
     margin: 0px;
@@ -10,7 +10,6 @@
     display:flex;
     justify-content: space-evenly;
     color:white;
-    text-decoration: underline;
     font-family: sans-serif;
     font-weight: bold;
     margin-bottom: 10px;
@@ -19,16 +18,18 @@
 
 .top-header h1 {
     font-size: 100px;
-    margin:10px 0px;
+    margin-top: 30px;
+    margin-bottom: 15px;
     text-align: center;
     overflow-wrap: anywhere;
     text-shadow:3px 4px rgb(90, 90, 90);
 }
 
 .top-header p {
-    font-size:40px;
+    font-size:38px;
     border: white solid 4px;
-    padding:12px;
+    background-color: rgb(34, 34, 124);
+    padding:10px;
     margin-bottom:0px;
     /* height: 100%; */
     white-space: nowrap;
@@ -56,7 +57,7 @@
 .cat {
     color: white;
     font-style: italic;
-    background: #121253;
+    background: #181851;
     text-align: center;
     text-decoration: underline;
     font-size: 40px;
@@ -70,7 +71,7 @@
     color: gold;
     border: 5px solid gold;
     box-shadow: 6px 7px rgb(29, 29, 255);
-    background: #11115f;
+    background: #1a1a5f;
     text-shadow: 2px 3px rgb(29, 29, 255);
     text-decoration: underline;
     margin: 30px 0px;
@@ -140,6 +141,7 @@ li {
     color: white;
     text-shadow: 0px 5px black;
     font-size: 60px;
+    text-transform:uppercase;
 }
 
 .popup .prev {
@@ -152,7 +154,6 @@ li {
     font-size: 42px;
     border: 4px solid gold;
     padding:12px;
-    text-decoration: underline;
     margin-top:275px;
     margin-bottom: 40px;
 }
@@ -196,10 +197,11 @@ li {
     font-weight: bold;
 }
 
-.addpts {
+.addpts, .subpts {
     font-size: 18px;
-    background: #121253;
+    background: rgb(10, 10, 131);
     font-weight: bold;
+    box-shadow:0px 4px 0px rgb(201, 201, 201);
     color:white;
     height: 40px;
     border:3px solid white;
@@ -209,4 +211,8 @@ li {
 
 .addpts:hover {
     color:greenyellow;
+}
+
+.subpts:hover {
+    color:rgb(255, 36, 36);
 }
