--- a/main.css
+++ b/main.css
@@ -8,7 +8,8 @@
 
 .top-header {
     display:flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap:40px;
     color:white;
     font-family: sans-serif;
     font-weight: bold;
