--- a/main.css
+++ b/main.css
@@ -73,7 +73,7 @@
     border: 5px solid gold;
     box-shadow: 6px 7px rgb(29, 29, 255);
     background: #1a1a5f;
-    text-shadow: 2px 3px rgb(29, 29, 255);
+    text-shadow: 3px 3px rgb(29, 29, 255);
     text-decoration: underline;
     margin: 30px 0px;
     padding: 37px 15px;
@@ -86,7 +86,7 @@
     background: #131390;
     text-shadow: 0px 0px 10px rgb(56, 66, 255);
     box-shadow: 0px 0px 15px inset goldenrod;
-    border: double 5px yellow;
+    border: solid 5px yellow;
 }
 
 li {
@@ -123,6 +123,7 @@ li {
 
 .popup h2 {
     display: inline-block;
+    background-color: rgb(10, 10, 117);
     justify-content: center;
     align-items: center;
     color:gold;
@@ -130,8 +131,8 @@ li {
     border-radius: 5px;
     max-width: 78vw;
     overflow-wrap: break-word;
-    text-shadow: 0px 5px black;
-    box-shadow: 5px 6px black;
+    text-shadow: 3px 8px rgb(6, 0, 43);
+    box-shadow: 3px 8px rgb(6, 0, 43);
     font-size: 84px;
     padding:20px;
     font-weight: bold;
@@ -140,9 +141,16 @@ li {
 
 .popup p {
     color: white;
-    text-shadow: 0px 5px black;
-    font-size: 60px;
+    text-shadow: 5px 9px rgb(9, 0, 63);
+}
+
+.question {
+    font-size: 80px;
     text-transform:uppercase;
+    max-width: 661px;
+    text-align: center;
+    margin:30px;
+    overflow-wrap:anywhere;
 }
 
 .popup .prev {
@@ -152,11 +160,11 @@ li {
     color: white;
     cursor: pointer;
     text-shadow: 0px 0px 7px black;
-    font-size: 42px;
+    font-size: 40px;
     border: 4px solid gold;
     padding:12px;
-    margin-top:275px;
-    margin-bottom: 40px;
+    margin-top:125px;
+    margin-bottom: 35px;
 }
 
 .prev:hover {
@@ -175,8 +183,8 @@ li {
     visibility: visible;
     background: #121253;
     color:greenyellow;
-    font-size: 64px;
-    margin-bottom: 32px;
+    font-size: 55px;
+    margin-bottom: 28px;
     text-shadow: 1px 0px 12px black;
     border: 4px solid gold;
     padding:10px;
