--- a/main.css
+++ b/main.css
@@ -56,15 +56,19 @@
 }
 
 .cat {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: white;
     font-style: italic;
     background: #181851;
     text-align: center;
     text-decoration: underline;
-    font-size: 40px;
+    font-size: 46px;
+    height: 84px;
     border: 4px solid white;
     box-shadow: 6px 7px rgb(29, 29, 255);
-    padding:10px 20px;
+    padding:12px 20px;
 }
 
 .points {
@@ -147,7 +151,7 @@ li {
 .question {
     font-size: 80px;
     text-transform:uppercase;
-    max-width: 661px;
+    max-width: 666px;
     text-align: center;
     margin:30px;
     overflow-wrap:anywhere;
@@ -172,7 +176,6 @@ li {
     border: 4px solid greenyellow;
     box-shadow: 0px 0px 10px greenyellow;
 }
-
 
 .ans {
     visibility: hidden;
